# pma2

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  agent.conf  agent_test.c  conf_detect.c  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  dbtest.c  icm.ini  initdb.sh  interface.cfg  libtool  logcli.c  logsrv.c  lsdbtest.c  make_config.sh  nltest.c  pma-agent.sh  pma-router.sh  pma.conf  pma.db  pma.sh  pma_bm.c  pma_dbm.c  pma_icm.c  pma_pem.c  pmainstall.sh  pmalog.conf  pma基础模块修改.txt  qconf.c  snmptest.c  sqltest  tags  (+2 more)
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
comm/: Makefile  Makefile.am  Makefile.in  comm.c  comm.h  comm_lite.c  comm_utils.c  comm_utils.h  exterior_daemon.c  exterior_daemon.h  handler.c  handler.h  header.h  interior_daemon.c  interior_daemon.h
command/: Makefile.am  iptables.h  mpls.h  routercmd.c  routercmd.h
command/sh-cmd/: 01  01-bk.txt  01.tcl  02  02.tcl  03  03.tcl  04  04.tcl  05  05.tcl  11  12  13  14  15  31  32  33  41  42  add_route_huawei.tcl  remove_route_huawei.tcl
command/sh-cmd/backup/: exec_multi_cmd.sh
conf/: Makefile  Makefile.am  Makefile.in  conf.c  conf.h
config/: agent.conf.101  agent.conf.102  agent.conf.103  agent.conf.104  agent.conf.11  agent.conf.111  agent.conf.112  agent.conf.113  agent.conf.114  agent.conf.12  agent.conf.121  agent.conf.122  agent.conf.123  agent.conf.124  agent.conf.13  agent.conf.14  agent.conf.21  agent.conf.23  agent.conf.24  agent.conf.31  agent.conf.32  agent.conf.33  agent.conf.34  agent.conf.41  agent.conf.42  agent.conf.43  agent.conf.44  agent.conf.51  agent.conf.52  agent.conf.53  agent.conf.54  agent.conf.61  agent.conf.62  agent.conf.63  agent.conf.64  agent.conf.71  agent.conf.72  agent.conf.73  agent.conf.74  agent.conf.81  (+96 more)
control/: Makefile  Makefile.am  Makefile.in  control.c  control.h
db/: Makefile  Makefile.am  Makefile.in  dbm_lsdb.c  dbm_lsdb.h  dbm_pdb.c  dbm_pdb.h  dbutils.c  dbutils.h
ddc/: Makefile  Makefile.am  Makefile.in  ddc.c  ddc.h  fah.c
lib/: Makefile  Makefile.am  Makefile.in  event.c  linklist.c  thread_pool.c
logger/: Makefile  Makefile.am  Makefile.in  logger.c  logger.h  logger_daemon.c
lsd/: Makefile  Makefile.am  Makefile.in  lsd_cmn.h  lsd_event.c  lsd_event.h  lsd_exchange.c  lsd_exchange.h  lsd_flood.c  lsd_flood.h  lsd_handler.c  lsd_handler.h  lsd_hello.c  lsd_hello.h  lsd_if.c  lsd_if.h  lsd_socket.c  lsd_socket.h  lsd_utils.c  lsd_utils.h  lsdsrv.c  lsdsrv.h  tags
lsdb/: Makefile  Makefile.am  Makefile.in  lsdb.h  lsdb_impl.c  lsdb_interface.c  lsdb_sender.c  lsdb_sender.h  lsdb_traverse.c
lsdb/private/: lsdb_inner.h
mmanager/: Makefile  Makefile.am  Makefile.in  module_manager.c  module_manager.h
netlink/: Makefile  Makefile.am  Makefile.in  netlink.c  netlink.h  route.c  route.h
policy/: Makefile  Makefile.am  Makefile.in  policy.c  policy.h  policy_parse.c  policy_parse.h  policy_table.c  policy_table.h
reg/: Makefile  Makefile.am  Makefile.in  reg.c  reg.h
router/: Makefile  Makefile.am  Makefile.in  interface.c  interface.h  router.c  router.h  routertable.c  routertable.h  tags
server/: Makefile  Makefile.am  Makefile.in  dbm.c  dbm.h  icm.c  icm.h  pem.c  pem.h  server.c  server.h  socket.c  socket.h  srvconf.h
snmp/: Makefile  Makefile.am  Makefile.in  main.c
snmp/includes/: bgp_snmp.h  huawei_mibs.h  oids.h  pma_api.h  snmpcore.h  snmpget.h  snmpset.h  snmptable.h  typemapper.h
snmp/snmp/: getBgpRouterTable.c  routerget.c  routerset.c  snmpcore.c  snmpget.c  snmpget1.c  snmpset.c  snmptable.c  snmptable2.c  snmptrap2.c
snmp/tcl/: getIfrate.tcl  remove_route_huawei.tcl  remove_route_quagga.tcl  set_bgpupdateinterval_quagga.tcl  set_cost_huawei.tcl  set_dead_huawei.tcl  set_hello_quagga.tcl  set_retransmit_quagga.tcl
tcl/: add_route_huawei.tcl  add_route_quagga.tcl  set_bgpupdateinterval_huawei.tcl  set_cost_quagga.tcl  set_dead_quagga.tcl  set_hello_huawei.tcl  set_retransmit_huawei.tcl
test/: Makefile  Makefile.am  Makefile.in  libgtest_main.la  pma.conf  test_bm.cc  test_bm_conf.cc  test_bm_conf.output  test_bm_exterior_comm.cc  test_bm_mmanager.c  test_bm_vty.c  test_icm.cc  test_unit.cc  test_xml.cc
timer/: Makefile  Makefile.am  Makefile.in  timer.c  timer.h
utils/: Makefile  Makefile.am  Makefile.in  ini.c  list.c  thread_daemon.c  thread_daemon.h  utils.c  utils.h  xml.h
vty/: Makefile  Makefile.am  Makefile.in  vty.c  vty.h
