noinst_LIBRARIES=libpmacomm.a  libpmacommlite.a
libpmacomm_a_SOURCES=comm_utils.c interior_daemon.c exterior_daemon.c  comm.c  handler.c
noinst_HEADERS=comm_utils.h\
	exterior_daemon.h comm.h interior_daemon.h header.h  handler.h
libpmacommlite_a_SOURCES=comm_lite.c comm_lite.h
libpmacomm_a_CFLAGS =-I$(LIB_XML_INCLUDE)
