noinst_LIBRARIES = libpmalsd.a
noinst_HEADERS = lsdsrv.h lsd_utils.h lsd_socket.h \
				 lsd_if.h lsd_hello.h lsd_handler.h\
				 lsd_flood.h lsd_exchange.h lsd_event.h\
				 lsd_cmn.h
libpmalsd_a_SOURCES= lsdsrv.c\
					 lsd_hello.c\
					 lsd_exchange.c\
					 lsd_flood.c\
					 lsd_event.c\
					 lsd_socket.c\
					 lsd_handler.c\
					 lsd_utils.c\
					 lsd_if.c 
